add: cluster, sentinel, replica and single redis compose files

--- a/docker-compose-cluster.yml
+++ b/docker-compose-cluster.yml
@@ -1,10 +1,5 @@
 version: '3.9'
 
-volumes:
-  redis-node-1-data:
-  redis-node-2-data:
-  redis-node-3-data:
-
 networks:
   app_subnet:
     driver: bridge
@@ -19,14 +14,16 @@ services:
       dockerfile: WorkerService/Dockerfile
     environment:
       - Seq=http://seq:80
-      - ObjectStore__Nodes__0=172.20.0.31:6373
-      - ObjectStore__Nodes__1=172.20.0.32:6374
-      - ObjectStore__Nodes__2=172.20.0.33.6375
+      - ObjectStore__Nodes__0=172.20.0.30:6379
+      - ObjectStore__Nodes__1=172.20.0.31:6379
+      - ObjectStore__Nodes__2=172.20.0.32:6379
     depends_on:
       - redis-cluster-setup
       - seq
+    volumes:
+      - ./locking.txt:/app/locking.txt
     networks:
-      app_subnet:    
+      app_subnet:
 
   seq:
     image: 'datalust/seq:latest'
@@ -41,7 +38,7 @@ services:
 
   redis-cluster-setup:
     image: 'redis:7.0'
-    command: 'redis-cli --cluster create 172.20.0.31:6373 172.20.0.32:6374 172.20.0.33:6375 --cluster-yes'
+    command: 'redis-cli --cluster create 172.20.0.31:6379 172.20.0.32:6379 172.20.0.33:6379 --cluster-yes'
     depends_on:
       - redis-node-1
       - redis-node-2
@@ -54,10 +51,7 @@ services:
     image: 'redis:7.0'
     command: 'redis-server /usr/local/etc/redis/redis.conf'
     container_name: redis-node-1
-    ports:
-      - '6373:6373'
     volumes:
-      - redis-node-1-data:/var/lib/redis
       - ./conf/redis-node-1.conf:/usr/local/etc/redis/redis.conf
     networks:
       app_subnet:
@@ -67,10 +61,7 @@ services:
     image: 'redis:7.0'
     command: 'redis-server /usr/local/etc/redis/redis.conf'
     container_name: redis-node-2
-    ports:
-      - '6374:6374'
     volumes:
-      - redis-node-2-data:/var/lib/redis
       - ./conf/redis-node-2.conf:/usr/local/etc/redis/redis.conf
     networks:
       app_subnet:
@@ -80,10 +71,7 @@ services:
     image: 'redis:7.0'
     command: 'redis-server /usr/local/etc/redis/redis.conf'
     container_name: redis-node-3
-    ports:
-      - '6375:6375'
     volumes:
-      - redis-node-3-data:/var/lib/redis
       - ./conf/redis-node-3.conf:/usr/local/etc/redis/redis.conf
     networks:
       app_subnet:
