--- a/WorkerService/appsettings.json
+++ b/WorkerService/appsettings.json
@@ -7,10 +7,6 @@
   },
   "Seq": "http://localhost:5341",
   "ObjectStore": {
-    "Nodes": [
-      "127.0.0.1:6373",
-      "127.0.0.1:6374",
-      "127.0.0.1:6375"
-    ]
+    "Nodes": [ "localhost:6373" ]
   }
 }
